# findingbug

./: .gitignore  0411병목문제.md  0413 병목문제.md  0415.md  README.md  SIGMA_FOLDER_STRUCTURE.md  cpu_todo.md  cpu계획.md  requirements.txt  rust_handoff_todo.md
HOLMES/: .gitignore  Dockerfile  audit_log_example.jsonl  create_rule.py  noise.yaml
HOLMES/configs/: darpa_e3_ground_truth.json  darpa_manifest.yaml  paper_defaults.yaml
HOLMES/docs/: paper_parameters.md
HOLMES/engine/: __init__.py
HOLMES/experiments/: __init__.py  benign.jsonl  config_example.yaml  parameters.py  pipeline.py  result.json  rules_test.yaml  run.py  sample.jsonl
HOLMES/native-rust/: Cargo.toml  (+1 more)
SIGMA_rule_extract/: .gitignore  guide.json
configs/: assumptions.yaml  darpa_e3_ground_truth_trace.json  darpa_manifest.yaml  pipeline_config.yaml
docs/: fullrun_timeout_and_parallel_plan.md
native-rust/: Cargo.toml  README.md
native-rust/src/: lib.rs
scripts/: adapter.py  download_and_sample_darpa.py  run_pipeline_with_progress.sh  sample_dataset.py  train_benign_profile.py
tests/: test_02_graph.py  test_04_matcher.py  test_05_prerequisite.py  test_06_hsg_builder.py  test_10_dependency_strength.py  test_acmin_pf_dependency_incremental.py  test_benign_profile_pipeline.py  test_download_and_sample_darpa_script.py  test_hsg_prerequisite_gating.py  test_noise_training.py  test_online_index_prereq.py  test_online_index_propagation_triggers.py  test_paper_mode.py  test_pf_call_path_separation_step3.py  test_rule_path_factor_prerequisite.py  test_scorer_paper.py  test_streaming_engine_mvp.py
(+5729 files in other folders)
